updates to wire frame

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div class="container">
 	<div class="navBar">class="navBar"</div>
 	<div class="weather">class="weather"</div>
-	<div class="header">Valise Header/Jumbotron</div>
-	<div id="mainContent" class="col-md-12">
-		<div id="todoForm" class="col-md-5">
+	<div class="header">Valise</div>
+	<div id="mainContent">
+		<div id="todoForm" class="col-md-6">
 		<p>To Do Form</p>
 		<form>
 			<label>Add To Do</label>
@@ -26,7 +26,7 @@
 			<button>Submit</button>
 		</form>
 		</div>
-		<div id='todoList' class="col-md-5">
+		<div id='todoList' class="col-md-6">
 		<p>To Do List</p>
 		<ul>
 			<li>get passport</li>
