--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
 	<title>Valise</title>
+
+	<!-- Added Our Style Sheet -->
+	<link rel="stylesheet" href="assets/css/style.css">
+
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="assets/css/style.css">
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+
+	<!-- Added Moment JS -->
+ 	<script src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
 
 </head>
 <body>
@@ -16,7 +23,11 @@
 <div class="container">
 	<div class="navBar">class="navBar"</div>
 	<div class="weather">class="weather"</div>
-	<div class="header">Valise</div>
+	<div class="header">
+	<h1>Valise</h1>
+	<!-- Countdown Display Goes Here -->
+	<span id="display"></span>
+	</div>
 	<div id="mainContent">
 		<div id="todoForm" class="col-md-6">
 		<p>To Do Form</p>
@@ -38,5 +49,6 @@
 	<div class="newsBox">daily news inputs</div>
 </div>
 
+<script type="text/javascript" src="countdown.js"></script>
 </body>
 </html>
