--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </div>
 
 <script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
-<script type="text/javascript" src="assets/js/app.js"></script>
+<script type="text/javascript" src="WeatherApp.js"></script>
 
 </body>
 </html>
