--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 
 <div class="container">
 	<div class="navBar">class="navBar"</div>
-	<div class="weather">class="weather"</div>
+	<div id="weather">
+		<span class="city"></span>
+  		<span class="wind"></span>
+  		<br>
+  		<span class="humidity"></span>
+  		<br>
+  		<span class="temp"></span>
+	</div>
 
 
 	<div class="header">
@@ -76,6 +83,7 @@
 
 
 <script type="text/javascript" src="countdown.js"></script>
+<script type="text/javascript" src="weather.js"></script>
 
 <script type="text/javascript" src="assets/js/app.js"></script>
 
