--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 	<link rel="stylesheet" href="assets/css/style.css">
 
+	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+	
+	<script type="text/javascript" src="newsApp.js"></script>
+
 </head>
 <body>
 
@@ -60,8 +64,7 @@
 	<div class="newsBox">daily news inputs</div>
 </div>
 
-<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
-<script type="text/javascript" src="WeatherApp.js"></script>
+
 
 </body>
 </html>
