--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 
 	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
-	
+
 	<script type="text/javascript" src="newsApp.js"></script>
 
 </head>
@@ -61,7 +61,10 @@
 			</ul>
 		</div>
 	</div>	
-	<div class="newsBox">daily news inputs</div>
+	<div class="newsBox">
+		<h1>daily news</h1>
+	</div>
+
 </div>
 
 
