travel info div hide & display

--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                 </ul>
             </div>
         </div>
-        <div class="newsBox">daily news inputs</div>
+        <div class="newsBox">daily news inputs
+        <button class="travelInfoButton hide">Change Travel Info</button>
+
+        </div>
     </div>
 
 
