completed landing page v1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Added Our Style Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -60,7 +60,8 @@
         <div id="mainContent">
             <div id="addTravelInfo">
                 <form class="travelInfo">
-                    <h3>Add your Information: </h3><p>(IMPORTANT: all fields must be entered for submission to go through)</p>
+                    <h3>Add your Information: </h3>
+                    <p>(IMPORTANT: all fields must be entered for submission to go through)</p>
 
 
                     <label>Name: </label>
@@ -107,28 +108,28 @@
                 <button id="travelSubmit">Submit Info</button>
             </div>
 
-                    <div id="todoForm" class="col-md-6">
-            <form>
-                <label>Add To Do</label>
-                <input type="addTodo" name="to do">
-                <button>Submit</button>
-            </form>
-        </div>
+            <div id="todoForm" class="col-md-6">
+                <form>
+                    <label>Add To Do</label>
+                    <input type="addTodo" name="to do">
+                    <button>Submit</button>
+                </form>
+            </div>
             <div id='todoList' class="col-md-6">
-            <p>To Do List</p>
-            <ul>
-                <li>get passport</li>
-                <li>save money</li>
-                <li>buy airline ticket</li>
-            </ul>
+                <p>To Do List</p>
+                <ul>
+                    <li>get passport</li>
+                    <li>save money</li>
+                    <li>buy airline ticket</li>
+                </ul>
+            </div>
         </div>
-    </div>  
-    <div class="newsBox">
-        <h1>daily news</h1>
-         <button class="travelInfoButton hide">Change Travel Info</button>
-    </div>
+        <div class="newsBox">
+            <h1>daily news</h1>
+            <button class="travelInfoButton hide">Change Travel Info</button>
+        </div>
 
-</div>
+    </div>
 
 
 
