added more background pictures

--- a/landingPage.html
+++ b/landingPage.html
@@ -153,8 +153,19 @@
                 </div>
 
 
-                <img class="bottom" src="assets/images/thailand.jpg" />
-                <img class="top" src="assets/images/sidney_travel-t1.jpg" />
+             
+                <img  src="assets/images/italyjpg.jpg"/>
+                <img  src="assets/images/maldives2.jpg"/>
+                <img  src="assets/images/sanFran.jpg"/>
+                <img  src="assets/images/iceland.jpg"/>
+                <img  src="assets/images/paris.jpg"/>
+                <img  src="assets/images/scotland.jpg"/>
+                <img  src="assets/images/beijing.jpg"/>
+                <img  src="assets/images/venice.jpg"/>
+                <img  src="assets/images/thailand.jpg"/>
+                <img  src="assets/images/sidney_travel-t1.jpg"/>
+
+
             </div>
         </div>
 
