--- a/testFB.html
+++ b/testFB.html
@@ -64,18 +64,27 @@
 			
 		</div>
 		<div class="col-sm-4 box" id="toDoListBox">
-			<table class="table table-hover" id='toDoListTable'>
-				<thead>
-					<tr>
-						<th>To Do List</th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-							
-				</tbody>
-			</table>			
-		</div>
+   			<div class="input-group">
+     			<input type="text" class="form-control" id="listItem" placeholder="To Do List">
+    		    <span class="input-group-btn">
+   		     	<button class="btn btn-primary" type="button" id="addToDoList"><span class="glyphicon glyphicon-plus-sign"></button>
+     		   </span>
+    		</div>
+			<hr>
+        <div id="toDoList">
+          <!--
+   			<div class="input-group">
+     			<input type="text" class="form-control" placeholder="To Do List">
+    		    <span class="input-group-btn">
+   		     	<button class="btn btn-primary saveTDL" type="button"><span class="glyphicon glyphicon-save" aria-hidden="true" ></button>
+     		   </span>
+     		    <span class="input-group-btn">
+   		     	<button class="btn btn-primary removeTDL" type="button"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></button>
+     		   </span>
+          
+            -->
+    		</div>
+
 			
 	</div>	
 	<div class="row">
