--- a/index.html
+++ b/index.html
@@ -1,98 +1,155 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Valise</title>
+    <title>Valise</title>
 
-	<!-- Added Our Style Sheet -->
-	<link rel="stylesheet" href="assets/css/style.css">
+    <!-- Bootstrap Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Bootstrap Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/BootstrapFormHelpers/dist/css/bootstrap-formhelpers.css">
 
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css?family=Gravitas+One|Playfair+Display" rel="stylesheet">
 
-	<!-- Added Moment JS -->
- 	<script src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
+    <!-- Added Our local style Sheet -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<script   src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 
-	<script type="text/javascript" src="newsApp.js"></script>
+    <script type="text/javascript" src="assets/BootstrapFormHelpers/dist/js/bootstrap-formhelpers.js"></script>
+    <script type="text/javascript" src="assets/BootstrapFormHelpers/js/bootstrap-formhelpers-selectbox.js"></script>
+    <script type="text/javascript" src="assets/BootstrapFormHelpers/js/lang/en_US/bootstrap-formhelpers-countries.en_US.js"></script>
+    <script type="text/javascript" src="assets/BootstrapFormHelpers/js/bootstrap-formhelpers-countries.js"></script>
+
+
+    <!-- Added Moment JS -->
+    <script src="http://momentjs.com/downloads/moment-with-locales.min.js"></script>
+
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 
 </head>
+
 <body>
 
 <div class="container">
-	<div class="navBar">class="navBar"</div>
-	<div id="weather">
-		<span class="city"></span>
-  		<span class="wind"></span>
-  		<br>
-  		<span class="humidity"></span>
-  		<br>
-  		<span class="temp"></span>
-	</div>
+    <div class="parallax-container">
+    <div class="parallax"><img id="parallaxImageOne" src="assets/images/wallstreet.jpg"></div>
+    <div id="headerTitle">
+        <h1>Valise</h1>
+        <h4>Take us with you</h4>
+    </div>
+
+    <!-- adding weather into the main content/header/parallax -->
+    <div id="weather">
+        <span class="city"></span>
+        <span class="wind"></span>
+        <br>
+        <span class="humidity"></span>
+        <br>
+        <span class="temp"></span>
+    </div>
+    <br>
+    <br>
+    <div id="countdownDisplay">
+        <span id="display"></span>
+    </div>
+
+    <br>
+
+    <div id="todoItemBox">
+        <div id='todoList'>
+            <h5>To Do List:</h5>
+            <ul>
+                <li>get passport</li>
+                <li>save money</li>
+                <li>buy airline ticket</li>
+            </ul>
+        </div>
+        <div id="todoForm">
+            <form>
+                <input type="addTodo" name="to do" placeholder="add to do">
+                <button>Submit</button>
+            </form>
+        </div>
+    </div>
+
+    </div>
+
+<!-- add traveling info form will be moved to the landing page, shall appear when user wants to change their trip
+    <div id="addTravelInfo">
+        <form class="travelInfo">
+            <h3>Add your Information: </h3>
+            <p>(IMPORTANT: all fields must be entered for submission to go through)</p>
 
 
-	<div class="header">
-	<h1>Valise</h1>
+            <label>Name: </label>
+            <br>
+            <input type="addName" id="userName" name="userName" placeholder="Your Name Here">
 
-	<p>Take us with you</p>
-	<!-- Countdown Display Goes Here -->
-	<span id="display"></span>
-	</div>
-	
-	<div id="mainContent">
-		<div id="addTravelInfo">
-			<form class="travelInfo">
-				<h3>Add your Information:</h3>
+            <br>
+            <label>Country: </label>
+            <br>
+            <div id="travelCountry" class="bfh-selectbox bfh-countries" data-country="US" data-flags="true">
 
-				<label>Name: </label>
-				<input type="addName" id="userName" name="userName" placeholder="John Doe">
-				<br>
+                <input type="hidden" value="">
+                <a class="bfh-selectbox-toggle" role="button" data-toggle="bfh-selectbox" href="#">
+                    <span class="bfh-selectbox-option input-medium" data-option=""></span>
+                    <b class="caret"></b>
+                </a>
+                <div class="bfh-selectbox-options">
+                    <input type="text" class="bfh-selectbox-filter">
+                    <div role="listbox">
+                        <ul role="option">
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-				<label>Country: </label>
-				<input type="destinationCounty" name="destinationCountry" id="destinationCountry" placeholder="India">
-				<br>
+            <form action="" method="post" name="form_citydetails" id="form_citydetails" enctype="multipart/form-data" onsubmit="return false;">
+                <label>City:</label>
+                <br>
+                <input class="ff_elem" type="text" name="ff_nm_from[]" value="" id="f_elem_city" placeholder="Type City Name">
+            </form>
 
-				<label>City: </label>
-				<input type="destinationCity" name="destinationCity" id="destinationCity" placeholder="Mumbai">
-				<br>
+            <br>
 
-				<label>Arrival Date: </label>
-				<input type="arrivalDate" name="arrivalDate" id="arrivalDate" placeholder="July 1st, 2018">
-				<br>
-			</form>
-		</div>
-		<div id="todoForm" class="col-md-6">
-			<form>
-				<label>Add To Do</label>
-				<input type="addTodo" name="to do">
-				<button>Submit</button>
-			</form>
-		</div>
-			<div id='todoList' class="col-md-6">
-			<p>To Do List</p>
-			<ul>
-				<li>get passport</li>
-				<li>save money</li>
-				<li>buy airline ticket</li>
-			</ul>
-		</div>
-	</div>	
-	<div class="newsBox">
-		<h1>daily news</h1>
-	</div>
+            <form action="provide travel date">
+                <strong><p>Arrival Date:</p></strong> <input type="date" name="arrivalDate" id="arrivalDate">
+            </form>
+
+        </form>
+        <br>
+        <button id="travelSubmit">Submit Info</button>
+    </div> -->
+
+    <div class="newsContainer">
+        <span class="newsBox">
+            <h1>daily news</h1>
+            <button class="travelInfoButton hide">Change Travel Info</button>
+        </span>
+    </div>
+
+    <div class="parallax-container travelPlans">
+        <div class="parallax travelImage"><img src="assets/images/suitcaseWallpaper.jpg"></div>
+        <div id="travelPlans">
+            <h3>Travel Plans</h3>
+        </div>
+    </div>
 
 </div>
 
-
-<script type="text/javascript" src="countdown.js"></script>
-<script type="text/javascript" src="weather.js"></script>
-
-<script type="text/javascript" src="assets/js/app.js"></script>
-
+    <script type="text/javascript" src="countdown.js"></script>
+    <script type="text/javascript" src="weather.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="newsApp.js"></script>
 </body>
+
 </html>
