adding media/grid queries

--- a/indexTwo.html
+++ b/indexTwo.html
@@ -73,9 +73,6 @@
 
         <div class="parallax"><img id="parallaxImageOne" src="assets/images/valiseWallpaper.jpg"></div>
 
-<!--    <div class="countdownDisplay">
-            <span id="display"></span>
-        </div> -->
         <br>
         <br>
 
@@ -107,11 +104,15 @@
 
     </div>
 
+    <div class="countdownDisplay">
+        <p class="countdownText">Count down until your depature</p>
+        <span id="display"></span>
+    </div>
+
 
 <div id="newsContainer">
     <span class="newsBox">
         <h4>Daily News</h4>
-
     </span>
 </div>
 
