adding changes to the nav bar

--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
 
     <div class="parallax-container">
 
-        <div id='navBarTop'>
+        <div id="navBarTop">
             <div class="navBar">
                 <div><p><i class="headerTitle">Valise</i></p></div>
                  <button onclick="location.href = 'landingPage.html'" type='button' class="right logOut" id='signOutBtn'><span class="glyphicon glyphicon-briefcase"></span>Log Out</button>
             </div>
 
-            
-        </div>
-        <div id="weather" class="left">
+            <div id="weather" class="left">
             <ul class="miniWeatherDisplayHide collapsible" data-collapsible="mdi-maps-place">
                 <li>
                     <div class="collapsible-header">Daily Weather<i class="mdi-maps-place"></i>
@@ -74,6 +72,9 @@
                 </li>
             </ul>
         </div>
+        </div>
+
+
 
 
         <div class="parallax"><img id="parallaxImageOne" src="assets/images/valiseWallpaper.jpg"></div>
