--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- Our local style Sheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
@@ -54,7 +55,7 @@
         <div id="navBarTop">
             <div class="navBar">
                 <div><p><i class="headerTitle">Valise</i></p></div>
-                 <button onclick="location.href = 'landingPage.html'" type='button' class="right logOut" id='signOutBtn'><span class="glyphicon glyphicon-briefcase"></span>Log Out</button>
+                 <button type='button' class="right logOut" id='signOutBtn'><span class="glyphicon glyphicon-briefcase"></span>Log Out</button>
             </div>
 
             <div id="weather" class="left">
@@ -253,13 +254,15 @@
 </div> -->
 
 
-   <script type="text/javascript" src="assets/js/app.js"></script>
-    <script type="text/javascript" src="assets/js/todoListAnimations.js"></script>
+    <script type="text/javascript" src="assets/js/backendTravelPlan.js"></script>
     <script type="text/javascript" src="assets/js/auth.js"></script>
     <script type="text/javascript" src="assets/js/backend.js"></script>
-    <script type="text/javascript" src="assets/js/countdown.js"></script>
+    <script type="text/javascript" src="assets/js/itinerary.js"></script>
+    <script type="text/javascript" src="assets/js/lodging.js"></script>
+    <script type="text/javascript" src="assets/js/flight.js"></script>
     <script type="text/javascript" src="assets/js/travelPlan.js"></script>
-
+    <script type="text/javascript" src="assets/js/todoListAnimations.js"></script>
+    <script type="text/javascript" src="assets/js/countdown.js"></script>
 </body>
 
 </html>
