--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 
 
     <!-- google font -->
-     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Playfair+Display|Playfair+Display+SC" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <!-- Our local style Sheet -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Our local style Sheet -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
@@ -39,7 +41,7 @@
 
     <!-- Materialize: Compiled and minified JavaScript -->
    
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <!-- can't mix boostrap and materialize, comment out for now... -->
 <!--     <script type="text/javascript" src="assets/BootstrapFormHelpers/dist/js/bootstrap-formhelpers.js"></script>
     <script type="text/javascript" src="assets/BootstrapFormHelpers/js/bootstrap-formhelpers-selectbox.js"></script>
@@ -125,9 +127,11 @@
 
 
 <div class="parallax-container travelPlans">
-    <div class="parallax travelImage"><img src="assets/images/suitcaseWallpaper.jpg"></div>
+    <div class="parallax travelImage"><img src="assets/images/brown-leather.jpg"></div>
         <div class='row'>
-    <div class='col s12'>
+        <h4>Travel Itinerary</h4>
+        <br>
+    <div class='col s12 flightDiv'>
         <table>
         <label><h5 class="travelPlansHeading">Flight</h5></label><span id="flightErr" style="color: red"></span>
         <br>
@@ -154,7 +158,7 @@
     </div>
     </div>
   <div class='row'>
-  <div class='col s12'>
+  <div class='col s12 lodgingDiv'>
     <table>
     <label><h5 class="travelPlansHeading">Lodging</h5></label><span id="lodgingErr" style="color: red"></span>
     <br>
@@ -181,7 +185,7 @@
     </div>
   </div>
      <div class='row'>
-  <div class='col s12'>
+  <div class='col s12 itineraryDiv'>
     <table>
     <label><h5 class="travelPlansHeading">Itinerary</h5></label><span id="itineraryErr" style="color: red"></span>
     <br>
