--- a/landingPage.html
+++ b/landingPage.html
@@ -121,7 +121,7 @@
                                     </div>
                                     <div class="form-group">
                                         <form action="" method="post" name="form_citydetails" id="form_citydetails" enctype="multipart/form-data" onsubmit="return false;">
-                                            <label for="cityInput">City</label>
+                                            <label for="cityInput">Destination City</label>
                                             <br>
                                             <input class="form-control" type="text" name="ff_nm_from[]" value="" id="f_elem_city" placeholder="Type City Name">
                                         </form>
