main button fix

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     <br>
                                     <h2 id="userMsgText2">Click the main page button below to head to your dashboard</h2>
                                     <br>
-                                    <button onclick="location.href = 'index.html'" type='submit' class='btn btn-primary' id='mainPageBtn'>Main Page</button>
+                                    <button onclick="location.href = 'main.html'" type='submit' class='btn btn-primary' id='mainPageBtn'>Main Page</button>
                                 </div>
                             </div>
                             <div class="col-sm-6 box" id="signInBox">
